...
                    android:textSize="40sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PM2.5 stands for Particulate Matter. It is the measure of certain particles in the air, including nitrates, sulfates, metals, or soil and dust particles. The numerical value is the measure of PM2.5 milligrams per cubic meter."
                    android:id="@+id/textViewPM25Info"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:textSize="20sp"/>
            </LinearLayout>
...
